# telegramBotsManager

./: .gitignore  README.md  agent.py  app.py  makefile  pyproject.toml  readme.md  requirement-dev.txt  requirements.txt  test.ipynb
.chalice/: config.json  policy.json
.chalice/deployed/: dev.json
.github/workflows/: black.yml  deploy.yml  isort.yml  mypy.yml  pyright.yml  ruff.yml
chalicelib/: webhook_manager.py
chalicelib/bots/: __init__.py  _botInterface.py  airflowrickybot.py  base.py  blockchainbot.py  bot.py  commands.py  context.py  factory.py  gmailbot.py  meteobot.py  pythongptbot.py  registry.py  runtime.py  settings.py  testbot.py
chalicelib/bots/botsmanager/: blueprint.py
chalicelib/bots/telegram/: __init__.py  bot.py  commands.py  message.py
chalicelib/schedules/: task.py
chalicelib/src/: blockchain.py  gmail.py  gpt.py  message.py  meteo.py  telegram.py
chalicelib/src/telegram/: telegram.py
chalicelib/utils/: secret.py  webhook_manager.py
script/: createBot
test/: test.py
