[project]
name = "telegrambotsmanager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chalice==1.32.0",
    "openai==2.9.0",
    "python-telegram-bot==22.5",
    "boto3==1.42.3",
    "requests==2.32.5",
    "pydantic==2.12.5"
]

[dependency-groups]
dev = [
    "ruff==0.14.8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
