[project]
name = "telegrambotsmanager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chalice==1.32.0",
    "openai==2.9.0",
    "python-telegram-bot==22.5",
    "boto3==1.42.3",
    "requests==2.32.4",
    "PyNaCl==1.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.8",
    "pyright==1.1.406",
    "types-requests==2.31.0.20231231",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
